[package]
name = "enimdnal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

itertools = "0.10"
nanorand = "0.7"
notan = { version = "0.9", default-features = false, features = ["backend", "log", "draw", "glsl-to-spirv"] }
